<resources>
    <string name="app_name">The Truth</string>
    <string name="email_layout_hint">Email</string>
    <string name="email_edittext_hint">Enter your email address</string>
    <string name="password_layout_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="password_edittext_hint">Enter your password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="account_create">Create Account</string>
    <string name="signup_welcome">Join the world of news</string>
    <string name="errorText">Invalid login credentials</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="user_image_description">User profile image</string>
    <string name="hello">Hello</string>
    <string name="logout_button">LOGOUT</string>
    <string name="auto_logout">Logout automatically after 10sec</string>
    <string name="user_name_placeholder">Username</string>
    <string name="profile_pic_description">User profile photo</string>
    <string name="send_mail">Send Email</string>
    <string name="password_reset">Enter your email address</string>
    <string name="home_title">Home</string>
    <string name="fav_title">Favourites</string>
    <string name="account_title">Account</string>
    <string name="network_error">No Internet</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_dialog_message">Do you want to exit?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirm">Press Confirm to Logout</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">Please check your internet connection and try again</string>
    <string name="signup_message">Need new account? Sign Up</string>
    <string name="refresh_message">Please refresh</string>
    <string name="email_error">Valid email required.</string>
    <string name="password_error">Valid Password Required.</string>
    <string name="email_send_success">Email send successfully.</string>
    <string name="ok">Ok</string>
    <string name="error">ERROR</string>
    <string name="change_language">Change Language</string>
    <string name="refresh">Please refresh</string>
    <string name="no_fav">No Favourites</string>
    <string name="check_email">Check your Email to reset your password</string>
    <string name="choose_language">Choose any language</string>
    <string name="reset_password_check">Do you want to reset password?</string>
    <string name="your_news">Your News</string>
    <string name="news_title">News Title</string>
    <string name="date">Date</string>
    <string name="news_content">News Content</string>
    <string name="input_error">Enter valid input</string>
    <string name="file_creation_error">Can\'t create file.</string>
    <string name="file_not_found">File not found</string>
</resources>