<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AccountFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/userDetailCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="100dp"
            app:cardBackgroundColor="@color/primary">

            <androidx.cardview.widget.CardView
                android:id="@+id/profileImageCardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/user_image_description"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/helloText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:layout_marginStart="150dp"
                android:layout_marginTop="55dp"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="80dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"/>

        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/favoritesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:text="@string/fav_title"
        app:drawableStartCompat="@drawable/ic_favorites"
        android:drawablePadding="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/editProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:text="Edit Profile"
        app:drawableStartCompat="@drawable/ic_edit"
        android:drawablePadding="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loginButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/logout_button" />


</LinearLayout>