<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="25dp"
        app:endIconMode="clear_text"
        android:hint="@string/email_layout_hint"
        app:hintTextAppearance="@style/hint_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            tools:ignore="LabelFor"
            style="@style/text_size_login"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="25dp"
        android:hint="@string/password_layout_hint"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        app:hintTextAppearance="@style/hint_text"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            style="@style/text_size_login"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/errorText"
        android:textStyle="bold"
        style="@style/text_size_login"
        android:textColor="@color/red_700"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="25dp"
        android:text="@string/login_button"
        style="@style/button"
        app:layout_constraintTop_toBottomOf="@+id/loginErrorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/forgot_password_text"
        style="@style/text_size_login"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginVertical="25dp"
        android:textColor="@color/red_900"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/text_size_login"
        android:layout_marginStart="110dp"
        android:layout_marginVertical="25dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>